auth-filter.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: AuthenticationFilter
metadata:
  name: jwt-example
spec:
  type: JWT
  jwtProviders:
    - name: example
      remoteJWKS:
        uri: https://auth.funnel-labs.io/auth/realms/funnel/protocol/openid-connect/certs
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: echo-service
spec:
  parentRefs:
    - name: eg
  hostnames:
    - "www.echo.com"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: echo-service
          port: 8080
          weight: 1
      filters:
        - extensionRef:
            group: gateway.envoyproxy.io
            kind: AuthenticationFilter
            name: jwt-example
          type: ExtensionRef
      matches:
        - path:
            type: PathPrefix
            value: /
